[package]
name = "leetcode-rust"
version = "0.1.0"
description = "Solutions in Rust for LeetCode challenges"
authors = ["Floris Cornel <floris@cornel.email>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
